--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,23 @@
         <spring-format.version>0.0.19</spring-format.version>
 
     </properties>
-
+<developers>
+	<developer>
+ 		<id>IsmaelHerrera2000</id>
+ 		<name>Ismael</name>
+ 		<email>ismherram@alum.us.es</email>
+ 		<url>https://github.com/IsmaelHerrera2000</url>
+ 		<roles>
+ 			<role>leader</role>
+ 		</roles>
+ 		<properties>
+ 			<picUrl>
+			
+			</picUrl>
+ 		</properties>
+ 	</developer>
+ <!-- More developers ...-->
+</developers>
     <dependencies>
         <!-- Spring and Spring Boot dependencies -->
         <dependency>
