Inscripcion en el POM de ismherram

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
  		<email>ismherram@alum.us.es</email>
  		<url>https://github.com/IsmaelHerrera2000</url>
  		<roles>
- 			<role>leader</role>
+ 			<role>developer</role>
  		</roles>
  		<properties>
  			<picUrl>
