--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,18 @@
         <spring-format.version>0.0.19</spring-format.version>
 
     </properties>
-
+    <developers>
+        <developer>
+            <id>alemerpal</id>
+            <name>Ale Merino Palma</name>
+            <email>alemerpal@alum.us.es</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <properties>
+            </properties>
+        </developer>
+    </developers>
     <dependencies>
         <!-- Spring and Spring Boot dependencies -->
         <dependency>
