Inscripcción en el pom de albdomrui

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,18 @@
         <spring-format.version>0.0.19</spring-format.version>
 
     </properties>
-
+	<developers>
+		 <developer>
+ 			<id>albdomrui</id>
+ 			<name>Alberto</name>
+ 			<email>albdomrui@alum.us.esm</email>
+ 			<roles>
+ 				<role>participant</role>
+			</roles>
+ 		</developer>
+ <!-- More developers ...-->
+</developers>
+	
     <dependencies>
         <!-- Spring and Spring Boot dependencies -->
         <dependency>
