--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.samples</groupId>
-    <artifactId>GL8-5</artifactId>
+    <artifactId>L8-5</artifactId>
     <version>2.2.0.BUILD-SNAPSHOT</version>
 
     <parent>
