cambios en el pom

--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,16 @@
                 <role>developer</role>
             </roles>
         </developer>
+        
+        <developer>
+            <id>pabparmen</id>
+            <name>Pablo Parra Méndez</name>
+            <email>pabparmen@alum.us.es</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
 
-    <!-- More developers ...-->
     </developers>
 	
     <dependencies>
