--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
  			<name>Alberto</name>
  			<email>albdomrui@alum.us.esm</email>
  			<roles>
- 				<role>participant</role>
+ 				<role>developer</role>
 			</roles>
  		</developer>
  		<developer>
@@ -68,7 +68,7 @@
  			<name>Mario</name>
  			<email>marizqlav@alum.us.esm</email>
  			<roles>
- 				<role>participant</role>
+ 				<role>developer</role>
 			</roles>
  		</developer>
  		
